# dblcm-technical-test

./: .gitignore  .pre-commit-config.yaml  README.md
real-time-transcription/: README.md  client.py  pyproject.toml  server.py
vad-system/: README.md  pyproject.toml
vad-system/vad_system/: eval.py  vad.py
vad-system/vad_system/data/raw/custom/: A0001_S001_0_G0001_G0002.txt
whisper_finetuning/: README.md  pyproject.toml  train.py
