[tool.poetry]
name = "real-time-transcription"
version = "0.1.0"
description = "Realtime speech transcription using Whisper"
authors = ["Ali Saghiran <a.saghiran@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "^0.2.14"
faster-whisper = "^1.0.3"
librosa = "^0.10.2.post1"
tabulate = "^0.9.0"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
onnxruntime = "^1.18.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
nbconvert = "^7.16.4"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = [
    # No need to traverse our git directory
    ".git",
    ".venv",
    # There's no value in checking cache directories
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [    
    "E203"
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
